testdata/valid/lookup_01.lisp
(defcolumns (X :i16) (Y :i16))
(deflookup test (Y) (X))
